--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -1,1 +1,7 @@
-/*stoped in 28:07*/
+@use '../variables'
+
+#main-content
+    background-color: variables.$bg-color
+    flex: 2 1 0
+    border-radius: variables.$border-radius
+    
