--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,10 +1,10 @@
 $font-stack: 'CoreDodamW01-Regular', sans-serif
-$font-secondary: 'Sono', sans-serif
+$font-secondary: 'Nunito', sans-serif
 $text-color: #fff
 $text-color-secondary: #a6a6a6
 $body-bg-color: #111119
 $bg-color: #ffffff07
-$bg-color-secondary: #1d1d1d
+$bg-color-secondary: #ffffff0a
 $border-radius: 10px
 $card-border-radius: 5px
 $gradient: linear-gradient(90deg, hsla(155, 100%, 50%, 1) 0%, hsla(176, 30%, 46%, 1) 100%)
