--- a/src/styles/components/socialnetwork.sass
+++ b/src/styles/components/socialnetwork.sass
@@ -13,5 +13,18 @@
         color: variables.$text-color-secondary
         font-size: 1.3rem
         @include mixins.center
+        transition: all .1s ease-in-out
 
+    #linkedin
+        color: #0072b1
         
+    #github
+        color: #111
+    
+    #instagram
+        color: #bc2a8b
+    
+    :hover
+        background: variables.$gradient
+        > svg
+            color: variables.$text-color
